# tinyToolkit

./: CMakeLists.txt  README.md
3rd/fmt/: run-msbuild.bat
3rd/fmt/include/fmt/: printf.h
cmake/check/: CheckCompiler.cmake  CheckGlobalType.cmake  CheckInstallPrefix.cmake  CheckSystem.cmake
cmake/traverse/: TraverseSource.cmake
example/container/: CMakeLists.txt  main.cpp  main.h
example/crypto/: CMakeLists.txt  main.cpp  main.h
example/debug/: CMakeLists.txt  main.cpp  main.h
example/hash/: CMakeLists.txt  main.cpp  main.h
example/id/: CMakeLists.txt  main.cpp  main.h
example/logger/: CMakeLists.txt  main.cpp  main.h
example/net/: CMakeLists.txt  main.cpp  main.h
example/option/: CMakeLists.txt  main.cpp  main.h
example/pool/: CMakeLists.txt  main.cpp  main.h
example/timer/: CMakeLists.txt  main.cpp  main.h
example/util/: CMakeLists.txt  main.cpp  main.h
script/: build_linux.sh  build_macOS.sh  build_windows.bat
source/: CMakeLists.txt
source/common/: macro.h  platform.h  symbol.h
source/container/: any.cpp  any.h  queue.cpp  queue.h
source/crypto/: base64.cpp  base64.h  url.cpp  url.h
source/debug/: dump.cpp  dump.h  stackTrace.cpp  stackTrace.h
source/hash/: hmac_md5.cpp  hmac_md5.h  hmac_sha1.cpp  hmac_sha1.h  hmac_sha224.cpp  hmac_sha224.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha384.cpp  hmac_sha384.h  hmac_sha512.cpp  hmac_sha512.h  md5.cpp  md5.h  sha1.cpp  sha1.h  sha224.cpp  sha224.h  sha256.cpp  sha256.h  sha384.cpp  sha384.h  sha512.cpp  sha512.h
source/id/: snowflake.cpp  snowflake.h  unique.cpp  unique.h
source/logger/: asyncLogger.cpp  asyncLogger.h  consoleSink.cpp  consoleSink.h  context.cpp  context.h  correspond.cpp  correspond.h  dailyFileSink.cpp  dailyFileSink.h  file.cpp  file.h  fileSink.cpp  fileSink.h  filter.cpp  filter.h  layout.cpp  layout.h  logger.cpp  logger.h  patternLayout.cpp  patternLayout.h  priorityFilter.cpp  priorityFilter.h  regexFilter.cpp  regexFilter.h  rotatingFileSink.cpp  rotatingFileSink.h  simpleLayout.cpp  simpleLayout.h  sink.cpp  sink.h  syncLogger.cpp  syncLogger.h  syslogSink.cpp  syslogSink.h  type.cpp  type.h
source/net/: buffer.cpp  buffer.h  channel.cpp  channel.h  context.cpp  context.h  define.cpp  define.h  endpoint.cpp  endpoint.h  eventLoop.cpp  eventLoop.h  eventPoll.cpp  eventPoll.h  operation.cpp  operation.h  socket.cpp  socket.h  tcpAcceptor.cpp  tcpAcceptor.h  tcpClient.cpp  tcpClient.h  tcpConnector.cpp  tcpConnector.h  tcpServer.cpp  tcpServer.h  tcpSession.cpp  tcpSession.h  type.cpp  type.h
source/option/: any.cpp  any.h  description.cpp  description.h  option.cpp  option.h  traits.cpp  traits.h  type.cpp  type.h  value.cpp  value.h
source/pool/: object.cpp  object.h  task.cpp  task.h
source/timer/: event.cpp  event.h  task.cpp  task.h  timer.cpp  timer.h
source/util/: application.cpp  application.h  filesystem.cpp  filesystem.h  latch.cpp  latch.h  math.cpp  math.h  regex.cpp  regex.h  signal.cpp  signal.h  singleton.cpp  singleton.h  string.cpp  string.h  system.cpp  system.h  time.cpp  time.h
support/cmake/check/: CheckCompiler.cmake  CheckSystem.cmake  CheckThirdPartyLibrary.cmake  CheckThirdparty.cmake
support/cmake/traverse/: TraverseInclude.cmake  TraverseInstall.cmake  TraverseSet.cmake  TraverseSourceGroup.cmake
